[project]
name = "content-tracker"
version = "0.1.0"
description = "Content tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "mypy>=1.16.0",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
]
